# LibraryManagementSystem

./: .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini  main.cpp  requirements.md
MainUI/: AddBookUI.cpp  AppState.hpp  BorrowBook.cpp  Context.hpp  FindAuthorUI.cpp  FindCategoryUI.cpp  ListLoanUI.cpp  ListMemberUI.cpp  LoginUI.cpp  MainMenuUI.cpp  MemberManageUI.cpp  NotificationUI.cpp  RegisterUI.cpp  ReturnBookUI.cpp  Router.hpp  Screens.hpp  SearchBookUI.cpp
data/: authors.csv  books.csv  categories.csv  librarians.csv  loans.csv  members.csv
docs/: demo-script.md  diagram.md  report.md
docs/tex/: cover_page.aux  cover_page.tex  header_footer.aux  header_footer.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  ref.bib
docs/tex/CHAPTER/: conclusion.aux  conclusion.tex  demo.tex  design_patterns.aux  design_patterns.tex  implementation_oop.aux  implementation_oop.tex  information.aux  information.tex  introduction.aux  introduction.tex  service_layer.tex  system_design.aux  system_design.tex  team_evaluation.aux  team_evaluation.tex  walkthrough.aux  walkthrough.tex
docs/tex/figures/: project_goals.txt
include/core/: Author.hpp  Book.hpp  Category.hpp  Librarian.hpp  Loan.hpp  Member.hpp  User.hpp
include/services/: AuthenticateManager.hpp  LibraryManager.hpp
include/utils/: CSVHandler.hpp  StringHandler.hpp
src/core/: Author.cpp  Book.cpp  Category.cpp  Librarian.cpp  Loan.cpp  Member.cpp  User.cpp
src/services/: AuthenticateManager.cpp  LibraryManager.cpp
src/utils/: CSVHandler.cpp  StringHandler.cpp
tex/: .gitignore  header_footer.tex  main.tex
tex/CHAPTER/: design_patterns.tex  information.tex  system_design.tex  walkthrough.tex
(+36 files in other folders)
